--- a/app/index.html
+++ b/app/index.html
@@ -97,5 +97,7 @@
     <script src="services/app-version-services.js"></script>
     <script src="services/app-mode-services.js"></script>
     <!-- endbuild -->
+    <script src="bower_components/marked/lib/marked.js"></script>
+    <script src="bower_components/angular-marked/dist/angular-marked.js"></script>
 </body>
 </html>
